# rpa-engineering-skill

./: .gitignore  LICENSE  README.md
.github/workflows/: test.yml
rpa-selenium-engineering/: SKILL.md
rpa-selenium-engineering/assets/project-template/: .env.example  README.md  pyproject.toml
rpa-selenium-engineering/assets/project-template/samples/: records.json
rpa-selenium-engineering/assets/project-template/src/rpa_template/: __init__.py  cli.py  config.py  exceptions.py
rpa-selenium-engineering/assets/project-template/src/rpa_template/adapters/: __init__.py  retry.py  selenium_browser.py  sqlite_state_store.py  structured_logger.py
rpa-selenium-engineering/assets/project-template/src/rpa_template/adapters/pages/: __init__.py  login_page.py  records_page.py
rpa-selenium-engineering/assets/project-template/src/rpa_template/contracts/: __init__.py  browser.py  logger.py  state_store.py
rpa-selenium-engineering/assets/project-template/src/rpa_template/core/: __init__.py  entities.py  services.py  state.py
rpa-selenium-engineering/assets/project-template/src/rpa_template/flows/: __init__.py  run.py
rpa-selenium-engineering/assets/project-template/tests/: conftest.py
rpa-selenium-engineering/assets/project-template/tests/contract/: test_state_store_contract.py
rpa-selenium-engineering/assets/project-template/tests/integration/: test_browser_session.py
rpa-selenium-engineering/assets/project-template/tests/unit/: test_core.py  test_processor_with_state.py  test_retry.py  test_state_store.py  test_structured_logger.py
(+2 files in other folders)
