[project]
name = "rpa-template"
version = "0.1.0"
description = "Selenium-first RPA scaffold aligned with the rpa-selenium-engineering agent skill"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "selenium>=4.20",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "tenacity>=8.2",
    "filelock>=3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
rpa = "rpa_template.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rpa_template"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
markers = [
    "integration: requires a live browser and target URL",
]
testpaths = ["tests"]
